qwikgame/static/css/qwik.css
/* --- Overall --- */
:root {  /* --- Colors --- */
--color-active-1:#e09900; --color-active-2:#c6d2e6; --color-alert: yellow; --color-backdrop: #f0f0f0; --color-blue: #2b78e4; --color-checked: #d8dfed; --color-disabled-bdr: #cccccc; --color-disabled-bkg: #cccccc; --color-disabled-txt: #999999; --color-error: #ff0000; --color-grey-3:#333333; --color-grey-c: #cccccc; --color-qwik: #f5a600; --color-qwik-dn: #d8dfed; --color-qwik-up: #ffb10a; --color-stencil: white;  /* --- Dimensions --- */ --dim-ease: 0.3rem; }
* { }
html { height: 100%; }
body { align-items: center; background-color: var(--color-backdrop); display: flex; flex-direction: column; font-family: NotoSans; height: 100vh; padding: 0; }
div { align-items: center; display: flex; flex-direction: column; }

/* --- Structure --- */
#content { align-items: stretch; flex: 1 0 auto; flex-direction: row; justify-content: stretch; margin: 4em 0 0 0; max-width: 1200px; width: 100% }
#detail { align-items: stretch; flex: 0 1 68.75%; gap: 1rem; padding: 0 1rem 10rem 1rem; width: 68.75% }
#feedback { border: 1px dashed var(--color-qwik); flex: auto; margin: 0.3em 0.3em 4em 0.3em; max-height: 4em; max-width: 1200px; padding: 0em 3em; }
#feedback:has(input:checked) { max-height: 40em; }
#feedback label { margin: 1em 0 0 0; }
#filler { flex-grow: 1; }
#footer { font-size: small; justify-content: end; }
#tab_bar { border-width: 0 0 1px 0; border-style: solid; flex-direction: row; gap: 1em; height: 4em; justify-content: space-around; left: 0; opacity: 1.0; position: fixed; top: 0; width: 100%; z-index: 100; }

/* --- Forms --- */
form > div { background-color: var(--color-stencil); box-shadow: 0 0 10px 3px rgba(0, 0, 0, .10); margin: 0.5rem 0 0.5rem 0; min-height: 6rem; }
form > div:last-child { background-color: inherit; box-shadow: none; }
form label:has(input) { margin: 1rem 0 0 2rem; }
form div.label + input { margin: 0 2rem 0 2rem }
div.form { gap: 1rem; align-items: stretch; justify-content: space-between; width: 100%; }
div.field { align-items: stretch; flex: auto; justify-content: start; padding: 0 0 2rem 0; width: 100% }
div.field span.label { font-weight: bold; text-transform: capitalize; }
div.field.naked { padding: 0 }
div.field:hover { background-color: var(--color-backdrop); }
div.field > *:not(div.label) { border: 0px solid white; overflow: hidden; transition: max-height 1s ease; }
div.field > div.label { font-size: 1.25rem; left: 0px; padding: 2rem; width: 100%; }
div.field > div.label > div { 0 flex-direction: row; }
div.field > div.label p { padding-left: 1rem; }
div.field > div.label div { flex-direction: row; }
div.field > div.label div:first-child span { margin-left: 0.3rem; }
div.field > div.label div:first-child span:last-child { margin-left: auto; }
div.field.open > *:not(div.label) { max-height: 50rem; }
fieldset { background-color: inherit; border: 0px solid white; padding: 0 0 2rem 2rem; position: relative; width: 100%; }
fieldset.disabled { background-color: var(--color-disabled-bkg); border-color: var(--color-disabled-bdr); color: var(--color-disabled-txt); }
fieldset:hover { background-color: var(--color-backdrop); }
fieldset > div { margin: 6rem 0 0 0; }
fieldset > *:not(legend) { max-height: 0; overflow: hidden; transition: max-height 1s ease; }
fieldset span.label { font-weight: bold; text-transform: capitalize; }
fieldset.open > *:not(div.label) { max-height: 50rem; }
label p { flex: auto; }
label.hidden { display: none }
label.large { border: 1px solid var(--color-backdrop); padding: 1rem; width: 100% }
label.option { display: flex; gap: 1rem; padding: 0.3rem 0 0.3rem 0; text-align: center }
label.option div.btn { height: 1rem }
label.option:first-child { flex-grow: 1; }
label.option:has(input[type=checkbox])::before { content: none; }
label.option:has(input[type=checkbox]:checked) { display: none; }
label.option:has(input:checked) { color: var(--color-qwik); }
label.reveal { border-color: var(--color-stencil); margin: 3rem 0 0 0; padding: 1rem 1rem 1rem 0; }
label.reveal > input { display: none; }
label.reveal:active { box-shadow: none; transform: none; }
label.reveal:has(input) ~ div { display: none; }
label.reveal:has(input:checked) ~ div { display: flex; }
label.reveal { display: inline-block; }
label.switch { display: inline-block; height: 2.6rem; margin-right: 3rem; position: relative; width: 4rem }
label.switch input { display: none }
label.toggle input { position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0 }
legend { font-size: 1.25rem; left: 0px; padding: 2rem 2rem 0 2rem; position: absolute; top: 0px; width: 100%; }
legend > div { flex-direction: row; }
legend div:first-child span { margin-left: 0.3rem; }
legend div:first-child span:last-child { margin-left: auto; }
legend p { padding-left: 1rem; }

/* --- Inputs --- */
input[type=checkbox] { margin: 0 1rem 0 1rem; }
input[type=submit] { cursor: pointer; flex: 0 0 auto; flex-direction: row; gap: 0.3rem; justify-content: center; text-align: center }
input[type=text] { flex: 1 1 auto; font-size: inherit }
input:checked + .slider { background-color: #66bb6a; }
input:checked + .slider:before { transform: translateX(3rem); }
input[type=range] { accent-color: var(--color-qwik); display: flex; flex: 1 1 100%; height: 2rem; margin: 1rem 0 1rem 0; width: 100% }
input.btn { position: relative; }
input.strength { display: flex; flex: 1 1 100%; height: 2rem; margin: 1rem 0 1rem 0; width: 100% }
input.disabled { background-color: var(--color-disabled-bkg); color: var(--color-disabled-txt); }

/* Over-ride std checkbox */
input[type=checkbox] { display: none; }
label:has(input[type=checkbox])::before { content: ''; border: 1px solid var(--color-grey-c); color: #f3f3f3; display: inline-block; font-size: 1.8rem; height: 1.2rem; line-height: 1rem; margin: .2rem .4rem .2rem 0; text-align: center; vertical-align: middle; width: 1.2rem; }
label:has(input[type=checkbox]:checked)::before { color: var(--color-qwik); content: "\2714"; }
/* ... */

